[package]
name = "lending"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build",  "anchor-spl/idl-build"]

[dependencies] 
anchor-lang = { version="0.30.1", features=["init-if-needed"]}
anchor-spl = { version = "0.30.1", features = ["metadata"]} 
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }

